# SpineSurgeryPlanning

./: .gitignore  readme.md
code/: CMakeLists.txt
code/pointnet/: 0001_label_22.txt  pointnet2_part_seg_msg.py  pointnet2_utils.py  pointnet_part_seg.py  pointnet_utils.py  pth2onnx.py
code/src/: PedicleSurgeryPlanning.cpp  PedicleSurgeryPlanning.h  SpinePointCloudSeg.cpp  SpinePointCloudSeg.h  SpineRegistrationICP.cpp  SpineRegistrationICP.h  loadonnx.cpp  loadonnx.h  main.cpp  vtk_tools.cpp  vtk_tools.h
code_c/: CMakeLists.txt
code_c/src/: loadonnx.cpp  loadonnx.h  main.cpp  vtk_tools.cpp  vtk_tools.h
code_cpp/: CMakeLists.txt
code_cpp/pointnet/: pth2onnx.py
code_cpp/src/: PedicleSurgeryPlanning.cpp  PedicleSurgeryPlanning.h  SpinePointCloudSeg.h  SpineRegistrationICP.cpp  SpineRegistrationICP.h  main.cpp  vtk_tools.cpp  vtk_tools.h
template_stl/: label_08.stl  label_08.txt  label_09.stl  label_09.txt  label_10.stl  label_10.txt  label_11.stl  label_11.txt  label_12.stl  label_12.txt  label_13.stl  label_13.txt  label_14.stl  label_14.txt  label_15.stl  label_15.txt  label_16.stl  label_16.txt  label_17.stl  label_17.txt  label_18.stl  label_18.txt  label_19.stl  label_19.txt  label_20.stl  label_20.txt  label_21.stl  label_21.txt  label_22.stl  label_22.txt  label_23.stl  label_23.txt  label_24.stl  label_24.txt
